<resources>
    <string name="app_name">PerOMAS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="btn_ok">Ok</string>
    <!-- Nav Drawer Menu Items -->

    <string name="home_string">Home</string>
    <string name="statistics_string">Statistics</string>
    <string name="controls_string">Controls</string>
    <string name="webserver_string">Webserver</string>
    <string name="track_string">Track Beacons</string>
    <string name="location_string">Location Service</string>
    <string name="settings_string">Settings</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="ble_not_supported">Unavailable: Bluetooth LE not supported</string>


    <string-array name="beacon_type">
        <item >iBeacon</item>
        <item >AltBeacon</item>
    </string-array>

    <string-array name="beacon_ids">
        <item >00000000-0000-0000-0000-000000000000</item>
        <item >00000000-0000-0000-0000-000000000001</item>
        <item >00000000-0000-0000-0000-000000000002</item>
        <item >00000000-0000-0000-0000-000000000003</item>
    </string-array>



    <!--<string-array name="nav_drawer_items">-->
        <!--<item >Home</item> &lt;!&ndash; ambient, status(devices ligados), temperatura, humidade &ndash;&gt;-->
        <!--<item >Statistics</item>-->
        <!--<item >Controls</item> &lt;!&ndash; rule based actions &ndash;&gt;-->
        <!--<item >Track Beacons</item>-->
        <!--<item >Location Service</item> &lt;!&ndash; user presence, on/off service &ndash;&gt;-->
        <!--&lt;!&ndash;<item >Login</item>  necessário mas nao parace no menu   &ndash;&gt;-->

    <!--</string-array>-->

    <!--&lt;!&ndash; Nav Drawer List Item Icons &ndash;&gt;-->
    <!--&lt;!&ndash; Keep them in order as the titles are in &ndash;&gt;-->
    <!--<array name="nav_drawer_icons">-->
        <!--<item>@drawable/ic_home</item>-->
        <!--<item>@drawable/ic_stats</item>-->
        <!--<item>@drawable/ic_control</item>-->
        <!--<item>@drawable/ic_bluetooth</item>-->
        <!--<item>@drawable/ic_bluetooth</item>-->
    <!--</array>-->


</resources>
