<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/home_string" />

        <item
            android:id="@+id/statistics"
            android:checked="false"
            android:icon="@drawable/ic_stats"
            android:title="@string/statistics_string" />

        <item
            android:id="@+id/controls"
            android:checked="false"
            android:icon="@drawable/ic_control"
            android:title="@string/controls_string" />

        <item
            android:id="@+id/track"
            android:checked="false"
            android:icon="@drawable/ic_bluetooth"
            android:title="@string/track_string" />


        <item
            android:id="@+id/location"
            android:checked="false"
            android:icon="@drawable/ic_bluetooth"
            android:title="@string/location_string" />


    </group>
</menu>